--- a/websites/templates/update_record.html
+++ b/websites/templates/update_record.html
@@ -1,24 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Create a new job application record</h1>
+<h1>Update an exisiting job search record</h1>
 
 <div class="row justify-content-center">
-<form method="POST" action="" {% url 'add_record'  %}>
+<form method="POST" action="" {% url 'update_record'}>
 {% csrf_token %}
 {{form.as_p}}
 
 <br/> 
 
 <button type="submit" class="btn btn-primary">
-    Add Job Application
+    Edit Job Application
 </button>
 
 </form>
 </div>
-
 <a class="btn btn=primary" href="{% url 'home' %}">
 Cancel
 </a>
-
 {% endblock %}
